--- a/Source/locale/en/leighzersciencebottling.cfg
+++ b/Source/locale/en/leighzersciencebottling.cfg
@@ -9,7 +9,7 @@ precursore-ore=Precursore
 [entity-name]
 sand-ore=Sand
 precursore-ore=Precursore
-bottling-plant=Bottling plant
+slowncheap-chemical-plant=Slow n' cheap chemical plant
 
 [entity-description]
 precursore-ore=A strange ore that is a fundamental piece of the liquid science processing chain.
@@ -27,7 +27,7 @@ onlyNeedToBottleScienceOres=Only require science bottling for science ores.
 
 [mod-setting-description]
 isPrecursoreEnabled=If set to true, precursore will be placed on the map and the liquid science production chain will require it.
-onlyNeedToBottleScienceOres=If set to true, there will only be one recipe per liquid science. Recipes will first be made using enabled science ores. Remaining liquid science recipes will use typical vanilla ingredients.
+onlyNeedToBottleScienceOres=If set to true, vanilla science pack recipes will be preserved. Only science ores will have to go through the bottling process.
 
 [fluid-name]
 liquid-precursore=Liquid precursore
