--- a/Source/locale/en/leighzersciencebottling.cfg
+++ b/Source/locale/en/leighzersciencebottling.cfg
@@ -1,29 +1,24 @@
 [resource]
-sand-ore=Sand
 precursore-ore=Precursore
 
 [autoplace-control-names]
-sand-ore=Sand
 precursore-ore=Precursore
 
 [entity-name]
-sand-ore=Sand
 precursore-ore=Precursore
 slowncheap-chemical-plant=Slow n' cheap chemical plant
 
 [entity-description]
 precursore-ore=A strange ore that is a fundamental piece of the liquid science processing chain.
 
-
 [item-name]
-sand-ore=Sand
+sand=Sand
 precursore-ore=Precursore
 glass-bottle=Glass bottle
 
 [mod-setting-name]
 isPrecursoreEnabled=Enable precursore.
 onlyNeedToBottleScienceOres=Only require science bottling for science ores.
-
 
 [mod-setting-description]
 isPrecursoreEnabled=If set to true, precursore will be placed on the map and the liquid science production chain will require it.
